# cxx-qt

./: CMakeLists.txt  Cargo.toml
.github/workflows/: github-cxx-qt-tests.yml
cmake/: CxxQt.cmake
crates/cxx-qt-build/src/: dependencies.rs  lib.rs
crates/cxx-qt-gen/src/: lib.rs
crates/cxx-qt-gen/src/parser/: cxxqtdata.rs  mod.rs
crates/cxx-qt-gen/src/syntax/: mod.rs  qtitem.rs  qtmod.rs
crates/cxx-qt-gen/test_outputs/: qenum.h
crates/cxx-qt-lib/: build.rs
crates/cxx-qt-lib-headers/include/core/: qmap.h
crates/cxx-qt/src/: lib.rs
crates/qt-build-utils/: Cargo.toml
crates/qt-build-utils/src/: lib.rs
crates/qt-build-utils/src/qml/: qmlplugincpp.rs
crates/test-qt-types/: Cargo.toml  build.rs
crates/test-qt-types/include/: qstring.h  qstringimpl.h
crates/test-qt-types/src/: lib.rs  qstringimpl.cpp
cxx-qt-build/src/: lib.rs
cxx-qt-gen/src/: extract.rs  gen_rs.rs
cxx-qt-gen/test_inputs/: basic_change_handler.rs  basic_pin_invokable.rs  subobject_pin_invokable.rs  types_qt_invokable.rs
cxx-qt-gen/test_outputs/: basic_change_handler.rs  basic_custom_default.rs  basic_ident_changes.rs  basic_invokable_and_properties.rs  basic_mod_attrs_vis.rs  basic_mod_passthrough.rs  basic_only_invokable.rs  basic_only_invokable_return.rs  basic_only_properties.rs  basic_pin_invokable.rs  basic_unknown_rust_obj_type.rs  basic_update_requester.rs  properties.rs  subobject_pin_invokable.rs  subobject_property.rs
cxx-qt-lib/src/: lib.rs  qcolor.rs  qvariant.rs
cxx-qt-lib/src/types/: qcolor.rs  qdate.rs  qdatetime.rs  qpoint.rs  qpointf.rs  qrect.rs  qrectf.rs  qsize.rs  qsizef.rs  qstring.rs  qtime.rs  qurl.rs  qvariant.rs
examples/: CMakeLists.txt
examples/basic_cxx_qt_qml/src/: mock_qt_types.rs
examples/cargo_without_cmake/: Cargo.toml  build.rs
examples/demo_threading/: CMakeLists.txt  Cargo.toml
examples/demo_threading/cpp/: main.cpp
examples/demo_threading/cpp/helpers/: qabstractlistmodelcxx.h  sensor.cpp  sensor.h
examples/demo_threading/qml/: MainWindow.qml
examples/demo_threading/rust/: build.rs
examples/demo_threading/rust/src/: lib.rs
examples/demo_threading/rust/src/workers/: accumulator.rs  sensors.rs
examples/demo_threading/src/: lib.rs  main.qml
examples/meta_project/cpp/: main.cpp
examples/qml_features/cpp/: main.cpp
examples/qml_features/qml/: main.qml  qml.qrc
examples/qml_features/qml/pages/: InvokablesPage.qml  ThreadingPage.qml
examples/qml_features/rust/: build.rs
examples/qml_features/rust/src/: containers.rs  invokables.rs  lib.rs
examples/qml_minimal/qml/: main.qml
examples/qml_minimal/rust/src/: cxxqt_object.rs
examples/qt_types_standalone/src/: lib.rs
tests/qt_types_standalone/rust/src/: qmap.rs
(+10 files in other folders)
